samples/_failures_safe/1761142153_e409e2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dcd79145.c: In function ‘main’:
./samples/SAFE/__tmp_dcd79145.c:158:5: error: expected expression at end of input
  158 |     if (a <
      |     ^~
./samples/SAFE/__tmp_dcd79145.c:158:5: error: expected declaration or statement at end of input
